--- a/style.css
+++ b/style.css
@@ -118,13 +118,11 @@ input[type=text]:focus {
     justify-content: center;
     row-gap: 15px;
 }
-.list .lineContainer{
+.bookDiv{
     display: grid;
     grid-template-columns: repeat(5, 1fr);
-    place-self: center;
-    align-items: center;
-    margin-left: 20px;
-    gap: 70px;
+    justify-items: center;
+    align-items: center;    
 }
 .radioButton{
     height: 20px;
