--- a/style.css
+++ b/style.css
@@ -80,6 +80,7 @@ input[type=text]:focus {
     align-items: center;
     margin-left: 20px;
     margin-right: 30px;
+    padding-top: 90px;
     
 }
 .headline{
